<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    tools:context=".ui.tracking.TrackingFragment">

    <!-- Title-->
    <TextView
        android:id="@+id/stunt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/Stunt_detect"
        android:fontFamily="@font/gentium_basic"
        android:textColor="@color/title"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <!-- Name -->
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gentium_basic"
        android:text="@string/name"
        android:textColor="@color/title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/stunt_title"
        app:layout_constraintStart_toStartOf="@+id/stunt_title"
        app:layout_constraintTop_toBottomOf="@+id/stunt_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/nameLabel"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/input_shape"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Age -->
    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gentium_basic"
        android:text="@string/age"
        android:textColor="@color/title"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ageLabel"
        app:layout_constraintStart_toStartOf="@+id/ageLabel"
        app:layout_constraintTop_toBottomOf="@+id/ageLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:background="@drawable/input_shape"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Height -->
    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gentium_basic"
        android:text="@string/height"
        android:textColor="@color/title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ageEditText"
        app:layout_constraintStart_toStartOf="@+id/ageEditText"
        app:layout_constraintTop_toBottomOf="@+id/ageEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/heightLabel"
        app:layout_constraintStart_toStartOf="@+id/heightLabel"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:background="@drawable/input_shape"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Gender -->
    <LinearLayout
        android:id="@+id/radio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/heightEditText"
        app:layout_constraintStart_toStartOf="@+id/heightEditText"
        app:layout_constraintTop_toBottomOf="@id/heightEditText">

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:enabled="true"
                android:fontFamily="@font/gentium_basic"
                android:text="@string/radiobutton_male"
                android:textColor="@color/title"
                android:textSize="24sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="false"
                android:enabled="true"
                android:fontFamily="@font/gentium_basic"
                android:text="@string/radiobutton_female"
                android:textColor="@color/title"
                android:textSize="24sp" />
        </RadioGroup>
    </LinearLayout>

    <!-- Submit -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="80dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/gentium_basic"
        app:layout_constraintEnd_toEndOf="@+id/radio_container"
        app:layout_constraintStart_toStartOf="@+id/radio_container"
        app:layout_constraintTop_toBottomOf="@id/radio_container" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>